@@ -1,7 +1,7 @@
-.TH gpib.conf 5 "@META_DATE@" "@META_ALIAS@" "@META_NAME@"
+.TH gpib-utils.conf 5 "@META_DATE@" "@META_ALIAS@" "@META_NAME@"
 
 .SH NAME
-gpib.conf \- configuration file for gpib-utils
+gpib-utils.conf \- configuration file for gpib-utils
 
 .SH DESCRIPTION
 The gpib-utils.conf file defines default instrument addresses for 
@@ -15,17 +15,26 @@ name and instrument address separated by white space.
 .LP
 Instrument names are the same as the gpib-utils utility name.
 .LP
-Instrument addresses can be in one of two formats: 
+Instrument addresses can be in one of the following formats:
 .TP
-\fBGPIB address\fR (0-30)
-The integer address for a device behind a local linux-gpib board.
+\fBGPIB address\fR \fI[board:]primary[,secondary]\fR
+GPIB devices addressed by board index, primary address, and secondary address.
+The board index is assumed to be 0 if unspecified.
+Secondary addressing is not used if the secondary address is unspecified.
+Primary and secondary addresses are normally in the range of 0 through 30.
 .TP
-\fBVXI-11 address\fR
+\fBVXI-11 address\fR \fIhostname:instr[,primary[,secondary]]\fR
 The address for a native VXI-11/LXI device is the device's
 IP address or host name usually concatenated with ``:inst0''.
 The address for a GPIB device behind a VXI-11/GPIB gateway is the 
-IP address of the gateway with a string representing the bus and address,
-for example ``:gpib0,15'' for bus zero, GPIB address 15.
+IP address of the gateway with a string representing the GPIB bus 
+and addresses, for example ``:gpib0,15'' or ``:gpib0,2,30''.
+.TP
+\fBserial address\fR \fIdevice[:flags]\fR
+Serial support is not yet implemented.
+.TP
+\fBsocket address\fR \fIhostname:port\fR
+Socket support is not yet implemented.
 .SH EXAMPLE
 .nf
 # These devices are behind a vxi/gpib gw
